<resources>
    <string name="app_name">Spafy</string>
    <string name="main_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="bad_credentials">Incorrect credentials</string>
    <string name="error_login">Login error</string>
    <string name="main_type_register">Register</string>
    <string name="main_error_server">Server error</string>
    <string name="login_error_unauthorized">Incorrect credentials</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="create_playlist_name">Add a title to your playlist</string>
    <string name="hint_name_playlist">Playlist name</string>
    <string name="your_library">Your Library</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_tittle">Song Title</string>
    <string name="playlist_preview">Playlist Preview</string>
    <string name="playlist_tittle">Playlist Title</string>
    <string name="icon_image">Icon image</string>
    <string name="login_error_bad_request">Login error: Bad request</string>
    <string name="login_error_generic">Login error: Server error</string>
    <string name="canciones">Songs</string>
    <string name="hint_username">Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_birth">Birthdate</string>
    <string name="hint_country">Country</string>
    <string name="hint_zipcode">Postal Code</string>
    <string name="login_error_empty_fields">Please fill in all fields</string>
    <string name="login_error_invalid_fields">Invalid fields</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="playlist_image">Playlist Image</string>
    <string name="num_canciones">0</string>
    <string name="playlist_name">Playlist name</string>
    <string name="create_playlist">Create playlist</string>
    <string name="go_back">Go back</string>
    <string name="logout">Logout</string>
    <string name="close_account">Close account</string>
    <string name="playlist">List</string>
    <string name="album">Album</string>
    <string name="podcast">Podcast</string>
    <string name="desc">Description</string>
    <string name="no_songs">No songs found</string>
    <string name="request_error">Request Error</string>
    <string name="server_error">Error on the server</string>
    <string name="unknown_error">Unknown error</string>
    <string name="remove_playlist">Remove Playlist</string>
    <string name="remove_playlisy_confirm">Are you sure you want to remove this playlist?</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="remove_song">Remove Song</string>
    <string name="remove_song_confirmation">Are you sure you want to remove this song?</string>
    <string name="your_lists">Your lists</string>
    <string name="podcast_you_follow">Podcast you follow</string>
    <string name="albums_you_follow">Albums you follow</string>
    <string name="field_not_empty">Field cannot be empty</string>
    <string name="confirm">Confirmation</string>
    <string name="add_to_playlist_message">Are you sure you want to add this song?</string>
    <string name="add_to_playlist_success">Added to playlist</string>
    <string name="menu">Menu</string>
</resources>
