<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_home"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_margin_default"
    tools:context=".homeModule.HomeFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_64dp"
        android:layout_height="@dimen/_64dp"
        android:layout_gravity="center" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tusPlaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin_default"
                android:text="@string/your_lists"
                android:textSize="24sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPlaylist"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tusPlaylist" />


            <TextView
                android:id="@+id/tusPodcasts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/common_margin_default"
                android:text="@string/podcast_you_follow"
                android:textSize="@dimen/tittle_size"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvPlaylist" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPodcast"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tusPodcasts" />

            <TextView
                android:id="@+id/tusAlbumes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin_default"

                android:text="@string/albums_you_follow"
                android:textSize="@dimen/tittle_size"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvPodcast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAlbums"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tusAlbumes" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>